--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.13",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjsi/class-validator": "^0.1.4",
     "apollo-server-express": "^3.8.1",
     "graphql": "^16.5.0",
+    "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
