--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "@nestjsi/class-validator": "^0.1.4",
     "apollo-server-express": "^3.8.1",
+    "class-transformer": "^0.5.1",
     "graphql": "^16.5.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
