add mocked data

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,8 +18,7 @@
             "sourceMaps": true,
             "envFile": "${workspaceFolder}/.env",
             "cwd": "${workspaceRoot}",
-            "console": "integratedTerminal",
-            "protocol": "inspector"
+            "console": "integratedTerminal"
         }
     ]
   }
