--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjsi/class-validator": "^0.1.4",
     "apollo-server-express": "^3.8.1",
     "class-transformer": "^0.5.1",
+    "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
