--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.13",
+    "@nestjs/mongoose": "^9.1.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjsi/class-validator": "^0.1.4",
     "apollo-server-express": "^3.8.1",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "mongoose": "^6.3.5",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -39,7 +41,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.4.5",
+    "@nestjs/testing": "^7.5.5",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
