--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.1",
     "graphql": "^16.5.0",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.5",
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
@@ -41,7 +42,7 @@
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.6",
+    "@nestjs/testing": "^7.5.5",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
     "@types/node": "^16.0.0",
